--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 </div>
             </section>
             <section class="section3">
-                <div class="container">
-                    <div class="mob-bacraund">
+                <div class="mob-bacraund">
+                    <div class="container">
                         <div class="section3-arbait">
                             <div class="section3-arbait__overlo"></div>
                             <div class="section3-arbait__icon">
@@ -130,61 +130,61 @@
                             </form>
                         </div>
                     </div>
-                    <div class="container__icon">
-                        <div class="section-icon">
-                            <h1 class="title5">TYPES OF REPAIR</h1>
-                            <div class="icon"><img src="imeges/Group 2.9.jpg"></div>
+                    <div class=" backraund__f">
+                        <div class="container__icon">
+                            <div class="section-icon ">
+                                <h1 class="title5">TYPES OF REPAIR</h1>
+                                <div class="icon"><img src="imeges/Group 2.9.jpg"></div>
+                            </div>
+                        </div>
+                        <div class="section3__interior">
+                            <div class="section3__interior_1"><img src="imeges/inter1.jpg">
+                                <div class="section3__interior_2">
+                                    <ul class="section3__interior_ul">
+                                        <h2 class="section3__interior_tit">Redecorating</h2>
+                                        <li class="section3__interior_li"> Dismantling of old coatings</li>
+                                        <li class="section3__interior_li"> Wallpapering</li>
+                                        <li class="section3__interior_li"> Painting walls and </li>
+                                        <li class="section3__interior_li"> Laying flooring</li>
+                                        <li class="section3__interior_li"> Replacing plumbing</li>
+                                        <li class="section3__interior_li"> Replacing sockets and switches</li>
+                                        <li class="section3__interior_li"> Replacing doors</li>
+                                    </ul>
+                                    <div class="section3__interior_but">from 1800 rub/m2</div>
+                                </div>
+                            </div>
+                            <div class="section3__interior_1"><img src="imeges/inter2.jpg">
+                                <div class="section3__interior_2">
+                                    <ul class="section3__interior_ul">
+                                        <h2 class="section3__interior_tit">Overhaul </h2>
+                                        <li class="section3__interior_li"> Dismantling of old coatings</li>
+                                        <li class="section3__interior_li"> Wallpapering</li>
+                                        <li class="section3__interior_li"> Painting walls and </li>
+                                        <li class="section3__interior_li"> Laying flooring</li>
+                                        <li class="section3__interior_li"> Replacing plumbing</li>
+                                        <li class="section3__interior_li"> Replacing sockets and switches</li>
+                                        <li class="section3__interior_li"> Replacing doors</li>
+                                    </ul>
+                                    <div class="section3__interior_but">from 1800 rub / m2</div>
+                                </div>
+                            </div>
+                            <div class="section3__interior_1"><img src="imeges/inter3.jpg">
+                                <div class="section3__interior_2">
+                                    <ul class="section3__interior_ul">
+                                        <h2 class="section3__interior_tit">Designer Repair</h2>
+                                        <li class="section3__interior_li"> Dismantling of old coatings</li>
+                                        <li class="section3__interior_li"> Wallpapering</li>
+                                        <li class="section3__interior_li"> Painting walls and </li>
+                                        <li class="section3__interior_li"> Laying flooring</li>
+                                        <li class="section3__interior_li"> Replacing plumbing</li>
+                                        <li class="section3__interior_li"> Replacing sockets and switches</li>
+                                        <li class="section3__interior_li"> Replacing doors</li>
+                                    </ul>
+                                    <div class="section3__interior_but">from 1800 rub / m2</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="section3__interior">
-                        <div class="section3__interior_1"><img src="imeges/inter1.jpg">
-                            <div class="section3__interior_2">
-                                <ul class="section3__interior_ul">
-                                    <h2 class="section3__interior_tit">Redecorating</h2>
-                                    <li class="section3__interior_li"> Dismantling of old coatings</li>
-                                    <li class="section3__interior_li"> Wallpapering</li>
-                                    <li class="section3__interior_li"> Painting walls and </li>
-                                    <li class="section3__interior_li"> Laying flooring</li>
-                                    <li class="section3__interior_li"> Replacing plumbing</li>
-                                    <li class="section3__interior_li"> Replacing sockets and switches</li>
-                                    <li class="section3__interior_li"> Replacing doors</li>
-                                </ul>
-                                <div class="section3__interior_but">from 1800 rub/m2</div>
-                            </div>
-                        </div>
-                        <div class="section3__interior_1"><img src="imeges/inter2.jpg">
-                            <div class="section3__interior_2">
-                                <ul class="section3__interior_ul">
-                                    <h2 class="section3__interior_tit">Overhaul </h2>
-                                    <li class="section3__interior_li"> Dismantling of old coatings</li>
-                                    <li class="section3__interior_li"> Wallpapering</li>
-                                    <li class="section3__interior_li"> Painting walls and </li>
-                                    <li class="section3__interior_li"> Laying flooring</li>
-                                    <li class="section3__interior_li"> Replacing plumbing</li>
-                                    <li class="section3__interior_li"> Replacing sockets and switches</li>
-                                    <li class="section3__interior_li"> Replacing doors</li>
-                                </ul>
-                                <div class="section3__interior_but">from 1800 rub / m2</div>
-                            </div>
-                        </div>
-                        <div class="section3__interior_1"><img src="imeges/inter3.jpg">
-                            <div class="section3__interior_2">
-                                <ul class="section3__interior_ul">
-                                    <h2 class="section3__interior_tit">Designer Repair</h2>
-                                    <li class="section3__interior_li"> Dismantling of old coatings</li>
-                                    <li class="section3__interior_li"> Wallpapering</li>
-                                    <li class="section3__interior_li"> Painting walls and </li>
-                                    <li class="section3__interior_li"> Laying flooring</li>
-                                    <li class="section3__interior_li"> Replacing plumbing</li>
-                                    <li class="section3__interior_li"> Replacing sockets and switches</li>
-                                    <li class="section3__interior_li"> Replacing doors</li>
-                                </ul>
-                                <div class="section3__interior_but">from 1800 rub / m2</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                </div>
             </section>
             <section class="section4">
                 <div class="container">
